--- a/Codigo/atelier_picinin/package.json
+++ b/Codigo/atelier_picinin/package.json
@@ -4,9 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently --kill-others-on-fail \"npm start\" \"npm run vite\"",
+    "vite": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "nodemon ../backend/app.js"
   },
   "dependencies": {
     "react": "^18.2.0",
