--- a/Codigo/backend/package.json
+++ b/Codigo/backend/package.json
@@ -7,7 +7,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "mongoose": "^6.5.4",
-    "sequelize": "^6.21.4"
+    "mongoose": "^6.5.4"
   }
 }
