--- a/Codigo/backend/package.json
+++ b/Codigo/backend/package.json
@@ -5,6 +5,7 @@
   },
   "proxy": "http://localhost:3000/",
   "dependencies": {
+    "body": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.5.4"
