--- a/Codigo/backend/package.json
+++ b/Codigo/backend/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "body": "^5.1.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "mongoose": "^6.5.4"
   }
