--- a/Codigo/atelier_picinin/package.json
+++ b/Codigo/atelier_picinin/package.json
@@ -11,10 +11,13 @@
     "start": "nodemon ../backend/app.js"
   },
   "dependencies": {
+    "bootstrap": "^5.2.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-collapse": "^5.1.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-image-gallery": "^1.2.9",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
