[Update] Adição da página de adicionar endereço de entrega

--- a/Codigo/backend/package.json
+++ b/Codigo/backend/package.json
@@ -5,6 +5,7 @@
   },
   "proxy": "http://localhost:3000/",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.2",
