--- a/Codigo/backend/package.json
+++ b/Codigo/backend/package.json
@@ -5,6 +5,7 @@
   },
   "proxy": "http://localhost:3000/",
   "dependencies": {
+    "axios": "^1.1.3",
     "bcrypt": "^5.0.1",
     "body": "^5.1.0",
     "cors": "^2.8.5",
